--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,2 @@
 [lfs]
-	url = http://admin:password@35.234.111.47:8081/artifactory/api/lfs/gitlfs-local
+url = "http://admin:password@35.234.111.47:8081/artifactory/api/lfs/gitlfs-local"
