--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-abc.txt filter=lfs diff=lfs merge=lfs -text
-“*.pdf” filter=lfs diff=lfs merge=lfs -text
-“my2.pdf” filter=lfs diff=lfs merge=lfs -text
+“*.txt” filter=lfs diff=lfs merge=lfs -text
